2019-1/231/users/4198/executions/1830_1640.log
== TEST (2019-06-13 18:17:34) 
-- CODE:
from numpy import*
a= array(eval(input("Digite o vetor quantidade de alunos: ")))
impar= 0
for i in range(size(a)):
	if(x[i]%3==0):
		i8mpar= impar + 1
print(impar)
cont= 0
for i in range(size(a)):
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:54) 
-- CODE:
from numpy import*
a= array(eval(input("Digite o vetor quantidade de alunos: ")))
impar= 0
for i in range(size(a)):
	if(a[i]%2!=0):
		impar= impar + 1
print(impar)
cont= 0
b= 0
for i in range(size(a)):
	if(a[i]%2!=0):
		vet[cont]= i
		cont= cont + 1
print(vet)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:45:46) 
-- CODE:
from numpy import*
a= array(eval(input("Digite o vetor quantidade de alunos: ")))
impar= 0
for i in range(size(a)):
	if(a[i]%2!=0):
		impar= impar + 1
print(impar)
cont= 0
b= 0
for i in range(size(a)):
	if(a[i]%2!=0):
		vet[cont]= i
		cont= cont + 1
print(vet)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:46:20) 
-- CODE:
from numpy import*
a= array(eval(input("Digite o vetor quantidade de alunos: ")))
impar= 0
for i in range(size(a)):
	if(a[i]%2!=0):
		impar= impar + 1
print(impar)
cont= 0
b= 0
for i in range(size(a)):
	if(a[i]%2!=0):
		b[cont]= i
		cont= cont + 1
print(b)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
